[metadata]
name = reclass
author = Arunas Grigalionis
author_email = arunas.grigalionis@gmail.com
summary = Initial summary, should be updated
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/niekosau
project_urls =
    Bug Tracker = https://github.com/niekosau/reclass/issues
    Documentation = https://github.com/niekosau/reclass
    Source Code = https://github.com/niekosau/reclass
license = Unlicense
classifier =
    Development Status :: 1 - Alpha
    Environment :: Console
    Operating System :: Linux
    Programming Language :: Python

[options]
packages = find:
python_requires = >=3.6
zip_safe = no

[entry_points]

[flake8]
max-line-length = 200
